# ReCaster

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-mingw32.cmake
docs/: ReCaster_issue1_investigation_report.md  cccaster-dll-targets.md  dll-architecture.md  dll-port-plan.md  future-improvements.md  implementing-real-rollback.md  non-implemented-stubs.md  phase-f-execution-plan.md  phase-f-sanity-check.md  port-status.md  spectator-plan.md  stubs.md  threading-migration.md
scripts/: build-local.sh  build.sh  caster.sh  commit_build_script_msg.txt  commit_cli_help_msg.txt  commit_cmake_cleanup_msg.txt  commit_final_msg.txt  commit_parity_msg.txt  commit_relay_gui_msg.txt  commit_relay_nofw_msg.txt  commit_skeleton_cleanup_msg.txt  commit_wine_debug_msg.txt  compare_rng.py  desync_test.sh  gen_embedded_font.py  imgui_stub.h  ini_bug_test.cpp  sdl_imgui_stub.h  setup-deps.sh  show_context.py  smoke_test_cli_args.cpp  smoke_test_concurrency.cpp  smoke_test_connection_detector.cpp  smoke_test_controller_mapping.cpp  smoke_test_ipc.cpp  smoke_test_phase1.cpp  smoke_test_phase2_link.cpp  smoke_test_relay_protocol.cpp
server/: README.md  tcp_listener.go
src/common/: concurrency.hpp  config.cpp  config.hpp  embedded_font.cpp  embedded_font.hpp  font_registry.cpp  font_registry.hpp  gui_window.cpp  gui_window.hpp  ini.cpp  ini.hpp  logger.cpp  logger.hpp  sdl_xinput_stub.cpp  ui_theme.cpp  ui_theme.hpp
src/common/controller/: binder.cpp  binder.hpp  mapping.cpp  mapping.hpp
src/common/ipc/: config_buffer.cpp  config_buffer.hpp  ipc_client.cpp  ipc_client.hpp  ipc_server.cpp  ipc_server.hpp  pipe_name.cpp  pipe_name.hpp
src/common/net/: connection_detector.cpp  connection_detector.hpp  connection_type.cpp  connection_type.hpp  enet_transport.cpp  enet_transport.hpp  ip_discovery.cpp  ip_discovery.hpp
src/common/net/relay/: relay_client.cpp  relay_client.hpp  relay_config.cpp  relay_config.hpp  relay_protocol.cpp  relay_protocol.hpp
src/common/win32/: env.cpp  env.hpp  memory.cpp  memory.hpp  pe_parser.cpp  pe_parser.hpp  process.cpp  process.hpp  window.cpp  window.hpp
src/dll/: algorithms.hpp  asm_hacks.cpp  asm_hacks.hpp  change_monitor.hpp  character_select.cpp  character_select.hpp  compression.cpp  compression.hpp  constants.hpp  dll_hacks.cpp  dll_hacks.hpp  dll_main.cpp  dll_process_manager.cpp  dll_process_manager.hpp  dll_stubs.cpp  exceptions.cpp  exceptions.hpp  frame_rate.cpp  frame_rate.hpp  hash.cpp  hash.hpp  input_reader.cpp  input_reader.hpp  inputs_container.hpp  ipc_receiver.cpp  ipc_receiver.hpp  mem_dump.cpp  mem_dump.hpp  messages.cpp  messages.hpp  net_listener.cpp  net_listener.hpp  netplay_connector.cpp  netplay_connector.hpp  netplay_manager.cpp  netplay_manager.hpp  netplay_states.hpp  protocol.cpp  protocol.hpp  rollback_addresses.hpp  (+8 more)
src/dll/entry/: dll_main.cpp  dll_stubs.cpp  lifecycle.cpp  lifecycle.hpp
src/dll/game/: addresses.hpp  character_tables.cpp  character_tables.hpp  game_io.cpp  game_io.hpp  rollback_addresses.hpp
src/dll/hooks/: asm_patches.cpp  asm_patches.hpp  frame_limiter.cpp  frame_limiter.hpp
src/dll/input/: air_dash_macro.cpp  air_dash_macro.hpp  input_reader.cpp  input_reader.hpp
src/dll/ipc/: receiver.cpp  receiver.hpp
src/dll/memory/: change_monitor.hpp  mem_dump.cpp  mem_dump.hpp
src/dll/netplay/: connector.cpp  connector.hpp  debug_log.hpp  inputs_container.hpp  manager.cpp  manager.hpp  network_simulator.cpp  network_simulator.hpp  network_thread.cpp  network_thread.hpp  rollback_manager.cpp  rollback_manager.hpp  states.hpp  thread_affinity.hpp
src/dll/overlay/: keymapper.cpp  keymapper.hpp  overlay_ui.cpp  overlay_ui.hpp  playername_overlay.cpp  playername_overlay.hpp  primitives.hpp
src/dll/protocol/: decoder.cpp  decoder.hpp  messages.cpp  messages.hpp
src/dll/spec/: spectate_client.cpp  spectate_client.hpp  spectator_manager.cpp  spectator_manager.hpp
src/dll/util/: algorithms.hpp  exceptions.cpp  exceptions.hpp  hash.cpp  hash.hpp  rolling_average.hpp  statistics.hpp  string_utils.cpp  string_utils.hpp  thread.hpp  timer.hpp
src/exe/: cli.cpp  cli.hpp  cli_args.cpp  cli_args.hpp  injector.cpp  injector.hpp  main.cpp  ui_state.hpp
src/exe/launcher/: dxvk.cpp  dxvk.hpp  game_runner.cpp  game_runner.hpp  launcher.cpp  launcher.hpp
src/exe/pages/: config_page.cpp  config_page.hpp  controller_helpers.cpp  controller_helpers.hpp  controllers_page.cpp  controllers_page.hpp  header.cpp  header.hpp  main_menu.cpp  main_menu.hpp  play_page.cpp  play_page.hpp  sidebar.cpp  sidebar.hpp  waiting_for_peer.cpp  waiting_for_peer.hpp
src/exe/session/: netplay_config.hpp  session.cpp  session.hpp
